Managed/Window/Internal/WindowNative.cs


    [DllImport(LibraryName, EntryPoint = "luna_window_mouse_move_event_get_position")]
    internal static extern void WindowMouseMoveEventGetPosition(IntPtr eventObject, out int x, out int y);

    [DllImport(LibraryName, EntryPoint = "luna_window_mouse_down_event_get_button")]
    internal static extern uint WindowMouseDownEventGetButton(IntPtr eventObject);

    [DllImport(LibraryName, EntryPoint = "luna_window_mouse_up_event_get_button")]
    internal static extern uint WindowMouseUpEventGetButton(IntPtr eventObject);

    [DllImport(LibraryName, EntryPoint = "luna_window_scroll_event_get_delta")]
    internal static extern void WindowScrollEventGetDelta(IntPtr eventObject, out float x, out float y);

    [DllImport(LibraryName, EntryPoint = "luna_window_touch_down_event_get_point")]
    internal static extern void WindowTouchDownEventGetPoint(IntPtr eventObject, out ulong id, out float x, out float y);

    [DllImport(LibraryName, EntryPoint = "luna_window_touch_move_event_get_point")]
    internal static extern void WindowTouchMoveEventGetPoint(IntPtr eventObject, out ulong id, out float x, out float y);

    [DllImport(LibraryName, EntryPoint = "luna_window_touch_up_event_get_point")]
    internal static extern void WindowTouchUpEventGetPoint(IntPtr eventObject, out ulong id, out float x, out float y);

    [DllImport(LibraryName, EntryPoint = "luna_window_drop_files_event_get_file_count")]
    internal static extern ulong WindowDropFilesEventGetFileCount(IntPtr eventObject);

    [DllImport(LibraryName, EntryPoint = "luna_window_drop_files_event_get_file")]
    internal static extern IntPtr WindowDropFilesEventGetFile(IntPtr eventObject, ulong index);

    [DllImport(LibraryName, EntryPoint = "luna_window_drop_files_event_get_position")]
    internal static extern void WindowDropFilesEventGetPosition(IntPtr eventObject, out float x, out float y);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_close")]
    internal static extern void IWindowClose(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_is_closed")]
    internal static extern int IWindowIsClosed(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_has_input_focus")]
    internal static extern int IWindowHasInputFocus(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_has_mouse_focus")]
    internal static extern int IWindowHasMouseFocus(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_is_minimized")]
    internal static extern int IWindowIsMinimized(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_foreground")]
    internal static extern UIntPtr IWindowSetForeground(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_is_maximized")]
    internal static extern int IWindowIsMaximized(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_minimized")]
    internal static extern UIntPtr IWindowSetMinimized(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_maximized")]
    internal static extern UIntPtr IWindowSetMaximized(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_restored")]
    internal static extern UIntPtr IWindowSetRestored(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_is_hovered")]
    internal static extern int IWindowIsHovered(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_is_visible")]
    internal static extern int IWindowIsVisible(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_visible")]
    internal static extern UIntPtr IWindowSetVisible(IntPtr self, int visible);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_get_style")]
    internal static extern uint IWindowGetStyle(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_style")]
    internal static extern UIntPtr IWindowSetStyle(IntPtr self, uint style);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_title")]
    internal static extern UIntPtr IWindowSetTitle(
        IntPtr self,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string title);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_get_position")]
    internal static extern void IWindowGetPosition(IntPtr self, out int x, out int y);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_position")]
    internal static extern UIntPtr IWindowSetPosition(IntPtr self, int x, int y);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_get_size")]
    internal static extern void IWindowGetSize(IntPtr self, out uint width, out uint height);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_size")]
    internal static extern UIntPtr IWindowSetSize(IntPtr self, uint width, uint height);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_get_framebuffer_size")]
    internal static extern void IWindowGetFramebufferSize(IntPtr self, out uint width, out uint height);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_get_dpi_scale_factor")]
    internal static extern float IWindowGetDpiScaleFactor(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_screen_to_client")]
    internal static extern void IWindowScreenToClient(IntPtr self, int x, int y, out int outX, out int outY);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_client_to_screen")]
    internal static extern void IWindowClientToScreen(IntPtr self, int x, int y, out int outX, out int outY);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_begin_text_input")]
    internal static extern UIntPtr IWindowBeginTextInput(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_set_text_input_area")]
    internal static extern UIntPtr IWindowSetTextInputArea(IntPtr self, in RectI inputRect, int cursor);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_end_text_input")]
    internal static extern UIntPtr IWindowEndTextInput(IntPtr self);

    [DllImport(LibraryName, EntryPoint = "luna_window_iwindow_is_text_input_active")]
    internal static extern int IWindowIsTextInputActive(IntPtr self);
}
